# humanoid_bullet_control

./: README.md  pyproject.toml
config/: humanoid_controllers.yaml
data/: hammer.npy  span_light.npy
examples/: humanoid_motion.py
humanoid_bullet_control/: __init__.py  control.py
